--- a/html5/initial.html
+++ b/html5/initial.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratório</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -11,7 +12,7 @@
     <header>
         <figure>
             <img src="https://thumbs.dreamstime.com/b/doodle-sketch-style-desktop-computer-monitor-keyboard-mouse-doodle-sketch-style-desktop-computer-monitor-keyboard-mouse-242118684.jpg" alt="Logotipo do Laboratório" width="200" height="100">
-            <figcaption>Laboratório</figcaption>
+            
         </figure>
         <h1>Laboratório</h1>
         <nav>
@@ -100,7 +101,17 @@
     <!-- Rodapé -->
     <footer>
         <p>&copy; 2024 Laboratório. Todos os direitos reservados.</p>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/home/iza/Área de Trabalho/FrontCraft/html5+css/coffe.html" class="back-button">
+                        <img src="seta.svg" alt="Voltar" class="back-icon">
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </footer>
+      
 
 </body>
 </html>
